@@ -1,3 +1,11 @@
+Thu Aug 16 12:01:28 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * prj_install.pl:
+
+          Fixed a bug where copying an executable didn't set the execute
+          permissions on the new file.  Also, unnecessary intermediate
+          directories are no longer made during installation.
+
 Fri Aug 10 18:15:22 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * docs/USAGE:
